# hdirect

./: .gitignore  ANNOUNCE  INSTALL  LICENSE  Makefile  NEWS  README  config.mk  hdirectcompiler.cabal  mkdirhier
comlib/: AutoPrim.hs  AutoPrim.idl  AutoPrimSrc.c  Automation.lhs  ClassFactory.lhs  Com.lhs  ComDll.lhs  ComException.lhs  ComPrim.hs  ComPrim.idl  ComPrimSrc.c  ComServ.lhs  Connection.hs  Connection.idl  ConnectionPoint.lhs  EnumInterface.lhs  ExeServer.lhs  HDirect.lhs  Makefile  Pointer.lhs  PointerPrim.hs  PointerPrim.idl  PointerSrc.c  Registry.c  Registry.h  SafeArray.h  SafeArray.hs  SafeArray.idl  SafeArrayPrim.c  StdDispatch.lhs  StdTypes.h  StdTypes.hs  StdTypes.idl  TypeLib.hs  TypeLib.idl  WideString.hs  WideString.idl  autoPrim.h  com.pkg  comPrim.h  (+1 more)
driver/: Main.lhs
lib/: .gitignore  HDirect.h  HDirect.lhs  Makefile  Pointer.lhs  PointerPrim.hs  PointerSrc.h  WideString.hs  WideString.idl  WideStringSrc.c  WideStringSrc.h  hdirect.pkg  hdirectlib.cabal
mk/: boilerplate.mk  config.mk  opts.mk  paths.mk  should_compile.mk  should_fail.mk  suffix.mk  target.mk  version.mk
scripts/: Parse.hs
src/: .depend  AbsHUtils.lhs  AbstractH.lhs  Attribute.lhs  Bag.lhs  BasicTypes.lhs  CStubGen.lhs  CgMonad.lhs  CodeGen.lhs  CoreIDL.lhs  CoreUtils.lhs  CustomAttributes.hs  DefGen.lhs  Desugar.lhs  Digraph.lhs  DsMonad.lhs  Env.lhs  ErrorHook.c  FiniteMap.lhs  GetOpt.lhs  HugsCodeGen.lhs  IDLSyn.lhs  IDLUtils.lhs  ImportLib.lhs  JavaProxy.lhs  Lex.lhs  LexM.lhs  LibUtils.lhs  Literal.lhs  Main.lhs  Makefile  MarshallAbstract.lhs  MarshallAuto.lhs  (+36 more)
